chore(gsd): remove blocking demo-submit gates

--- a/.planning/phases/04-demo-submit/04-04-PLAN.md
+++ b/.planning/phases/04-demo-submit/04-04-PLAN.md
@@ -5,7 +5,7 @@ type: execute
 wave: 1
 depends_on: []
 files_modified: [docs/architecture.png]
-autonomous: false
+autonomous: true
 gap_closure: true
 
 must_haves:
@@ -96,23 +96,12 @@ File exists, is >5KB, and `file` reports it as a PNG image (or valid image forma
   </done>
 </task>
 
-<task type="checkpoint:human-verify" gate="blocking">
-  <what-built>Rendered architecture diagram from existing Mermaid source</what-built>
-  <how-to-verify>
-    1. Open `docs/architecture.png` in an image viewer or browser
-    2. Confirm all 8 agents are visible and labeled: BookingAgent, SearchAgent, SummaryAgent, FailureDetector, TraceAnalyzer, ToolAnalyzer, DiagnosisEngine, FixGenerator
-    3. Confirm data flow arrows are readable and the overall layout is clear for hackathon judges
-    4. Confirm TraceStore and IndagineController/IndaginePipeline orchestration glue are also shown
-  </how-to-verify>
-  <resume-signal>Type "approved" if the diagram is readable and complete, or describe issues to fix</resume-signal>
-</task>
-
 </tasks>
 
 <verification>
 - `docs/architecture.png` exists and is >5KB
 - `file docs/architecture.png` reports valid image format
-- Human confirms visual readability
+- Optional: open `docs/architecture.png` to confirm it is readable and complete
 </verification>
 
 <success_criteria>
