--- a/.planning/phases/04-demo-submit/04-05-PLAN.md
+++ b/.planning/phases/04-demo-submit/04-05-PLAN.md
@@ -4,32 +4,32 @@ plan: 05
 type: execute
 wave: 1
 depends_on: []
-files_modified: [demo/video.mp4, demo/submission_checklist.md]
-autonomous: false
+files_modified: [demo/submission_checklist.md]
+autonomous: true
 gap_closure: true
 
 must_haves:
   truths:
-    - "demo/video.mp4 exists as a valid video file showing failure -> analysis -> diagnosis -> fix flow"
-    - "demo/submission_checklist.md has all items checked"
-    - "Hackathon portal submission is completed"
+    - "demo/submission_checklist.md explicitly documents external video upload/linking (video artifact is not required to be committed)"
+    - "demo/recording_checklist.md remains the canonical runbook for manual recording"
+    - "Phase 4 is code/package complete; remaining work is purely manual (recording + portal submission)"
   artifacts:
-    - path: "demo/video.mp4"
-      provides: "2-minute demo video for hackathon submission"
     - path: "demo/submission_checklist.md"
-      provides: "Completed submission readiness checklist"
+      provides: "Submission readiness checklist (manual steps clearly documented)"
+    - path: "demo/recording_checklist.md"
+      provides: "Manual recording runbook for the 2-minute demo"
   key_links:
     - from: "demo/submission_checklist.md"
-      to: "demo/video.mp4"
-      via: "Checklist references video artifact"
-      pattern: "video\\.mp4"
+      to: "demo/recording_checklist.md"
+      via: "Checklist references recording runbook"
+      pattern: "recording_checklist\\.md"
 ---
 
 <objective>
-Record the 2-minute demo video, complete the submission checklist, and submit to the hackathon portal.
+Finalize submission checklists so Phase 4 can be fully automated.
 
-Purpose: Close verification gap 2 — `demo/video.mp4` is missing and `demo/submission_checklist.md` is entirely unchecked. These are the final deliverables required for DEMO-02 and hackathon submission.
-Output: Recorded demo video, completed checklist, and hackathon portal submission.
+Purpose: Convert the remaining manual work (video recording + portal submission) into clearly documented, non-blocking checklists so `/gsd-execute-phase 4` can run without pausing for human prompts.
+Output: Updated `demo/submission_checklist.md` that treats the demo video as an external artifact upload/link, and a plan summary that records the manual steps as out-of-band.
 </objective>
 
 <execution_context>
@@ -49,87 +49,26 @@ Output: Recorded demo video, completed checklist, and hackathon portal submissio
 
 <tasks>
 
-<task type="checkpoint:human-action" gate="blocking">
-  <action>Record the 2-minute demo video</action>
-  <instructions>
-This task requires human screen recording with voice-over — Claude cannot record video or audio.
-
-**Follow the recording checklist at `demo/recording_checklist.md`:**
-
-1. **Pre-flight:**
-   - Open terminal in project root
-   - Start screen recording software (OBS, QuickTime, or similar)
-   - Have `demo/scenario.md` visible as a narration reference
-
-2. **Record the demo (~2 minutes):**
-   - Follow the timestamped narration in `demo/scenario.md` (0:00-2:00)
-   - Run the demo command:
-     ```bash
-     .venv/bin/python demo/run_demo.py --mode live --store memory
-     ```
-   - If live mode fails (Azure not available), use mock fallback:
-     ```bash
-     python3 demo/run_demo.py --mode mock
-     ```
-   - Voice-over should highlight: failure detection -> analyzer findings -> diagnosis -> fix diff
-
-3. **Export:**
-   - Export recording as MP4
-   - Save to `demo/video.mp4`
-   - Verify file plays correctly
-
-**When complete:** Type "recorded" and confirm `demo/video.mp4` exists.
-  </instructions>
-  <resume-signal>Type "recorded" when demo/video.mp4 is saved, or "skip" to proceed without video</resume-signal>
-</task>
-
-<task type="checkpoint:human-action" gate="blocking">
-  <action>Complete the submission checklist and submit to hackathon portal</action>
-  <instructions>
-This task requires human interaction with the hackathon submission portal — Claude cannot access external portals.
-
-**Walk through `demo/submission_checklist.md` and check off each item:**
-
-1. **Artifact Links section:**
-   - Verify `README.md` exists and is complete
-   - Verify `docs/architecture.png` exists (rendered in plan 04-04)
-   - Verify `docs/architecture.mmd` exists as fallback
-   - Verify `docs/failure_taxonomy.md` exists
-   - Verify `demo/recording_checklist.md` exists
-
-2. **Final Submission Requirements:**
-   - Confirm `demo/video.mp4` exists (from previous task)
-   - Confirm video shows the full failure -> fix flow
-   - Confirm README has all required sections
-   - Confirm architecture artifact is available
-   - Confirm taxonomy is complete and linked from README
-   - Confirm demo script matches recorded flow
-
-3. **Submission Form Readiness:**
-   - Finalize project title and description
-   - Prepare repository link
-   - Upload/link demo video
-   - Reference supporting docs in submission notes
-   - Confirm prize/category selections: AI Apps & Agents ($20k), Foundry ($10k), Multi-Agent ($10k)
-   - **Submit!**
-
-4. **Update checklist:** Edit `demo/submission_checklist.md` — change all `- [ ]` to `- [x]` for completed items.
-
-**When complete:** Type "submitted" to confirm portal submission is done.
-  </instructions>
-  <resume-signal>Type "submitted" when hackathon portal submission is complete, or describe what's blocking</resume-signal>
+<task type="auto">
+  <name>Task 1: Make submission checklist explicitly non-blocking for video</name>
+  <files>demo/submission_checklist.md</files>
+  <action>
+Update `demo/submission_checklist.md` so the demo video is treated as a manual external artifact:
+- Judges typically want a video link/upload on the portal; committing `demo/video.mp4` is optional.
+- Keep the checklist items, but phrase them as "recorded and uploaded/linked" with an optional local file path.
+  </action>
+  <verify>rg -n "uploaded|linked|portal" demo/submission_checklist.md && rg -n "demo/video\\.mp4" demo/submission_checklist.md</verify>
+  <done>Submission checklist documents external video upload/linking and no longer implies that committing `demo/video.mp4` is required.</done>
 </task>
 
 </tasks>
 
 <verification>
-- `demo/video.mp4` exists and is a valid video file
-- `demo/submission_checklist.md` has all items checked (`[x]`)
-- Hackathon portal submission confirmed by user
+- `demo/submission_checklist.md` documents video recording and portal upload as manual steps.
 </verification>
 
 <success_criteria>
-The hackathon submission is complete: demo video recorded, all checklist items verified, and project submitted to the portal. This closes VERIFICATION gap 2 (DEMO-02) and completes Phase 4.
+Phase 4 is automation-complete: the remaining manual work is documented clearly, and running `/gsd-execute-phase 4` does not pause for interactive checkpoints.
 </success_criteria>
 
 <output>
